.local-manifest/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  ports:
  - port: 3000
    name: http
  - port: 22
    name: ssh
  selector:
    app: gitea
